Cleaned up jumpy code

--- a/jQueryPlugin/jumpy.html
+++ b/jQueryPlugin/jumpy.html
@@ -18,7 +18,7 @@
 <script src="src/jumpy.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
   // Use default options
-  $('label').jumpy();
+  $('input').jumpy();
 </script>
 </body>
 </html>
