--- a/jQueryPlugin/greenGreen.html
+++ b/jQueryPlugin/greenGreen.html
@@ -7,7 +7,7 @@
 
 </style>
 <script src="lib/jquery-1.7.1.js" type="text/javascript" charset="utf-8"></script>
-<script src="src/green.js" type="text/javascript" charset="utf-8"></script>
+<script src="src/greenGreen.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
   // Use default options
   $(function (){
