fixed chris's file refs

--- a/jQueryPlugin/shadowMe.html
+++ b/jQueryPlugin/shadowMe.html
@@ -24,7 +24,7 @@
 <div class='shadow'>Hello World</div>
 
 <script src="lib/jquery-1.7.1.js" type="text/javascript" charset="utf-8"></script>
-<script src="src/example.js" type="text/javascript" charset="utf-8"></script>
+<script src="src/shadowMe.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
   // Use default options
   $('div.shadow').shadowMe();
