converting explodingList to a plugin

--- a/jQueryPlugin/explodingList.html
+++ b/jQueryPlugin/explodingList.html
@@ -64,9 +64,11 @@
 </div>
 <script type="text/javascript" charset="utf-8">
   // Use headers to toggle presence of lower level lists
+  console.log("Adding plugin");
   $('.apiServiceHeader').showHideChildren();
+  $('.apiService').toggleAble();
   $('.apiMethodHeader').showHideChildren();
-  
+  $('.apiMethod').toggleAble(); 
   // items of this class show "selectedness" 
   $('.argument').toggleAble();
 </script>
